# camina-drummer

./: LICENSE  README.md  display.py  drum_machine.py  drummer.py  pattern_loader.py  patterns.yaml  pyproject.toml
assets/: background.afdesign
kits/1/: README.md
